plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.0.1'
}

group 'fr.univ_amu.m1info.board_game_library'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
    modularity.inferModulePath = true
}

ext {
    junitVersion = '5.10.2'
    mockitoVersion = '5.14.2' // Latest Mockito version
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'fr.univ_amu.m1info.board_game_library'
    mainClass = 'fr.univ_amu.m1info.board_game_library.OthelloApplication' // Correct subpackage
}

javafx {
    version = '22.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    // Main dependencies
    implementation 'org.openjfx:javafx-controls:22.0.1'
    implementation 'org.openjfx:javafx-fxml:22.0.1'

    // For unit tests
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"

}

test {
    useJUnitPlatform()

    jvmArgs += [
            '--add-opens', 'fr.univ_amu.m1info.board_game_library/fr.univ_amu.m1info.board_game_library=ALL-UNNAMED',
            '--add-opens', 'fr.univ_amu.m1info.board_game_library/fr.univ_amu.m1info.board_game_library.othello=ALL-UNNAMED',
            '--add-opens', 'fr.univ_amu.m1info.board_game_library/fr.univ_amu.m1info.board_game_library.graphics=ALL-UNNAMED',
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}


jlink {
    imageZip = project.file("${rootProject.layout.buildDirectory}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}
